@@ -125,3 +125,146 @@ IMPORTANT:
 echo "Chunk 23 complete:"
 echo "✔ All createTab(...) invocations replaced with createTabWithLoader(...)"
 echo "✔ Backups created as *.bak next to each modified file"
+
+
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ rm chunk22.sh
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk23.sh
+Scanning for createTab(...) calls under src/main/java
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk24.sh
+=== Applying Chunk 24 (Tab rewrite, A+B+C) ===
+./chunk24.sh: line 8: src/main/java/com/fileexplorer/controller/MainController.java: No such file or directory
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk25.sh
+Chunk 25 applied. Backups are at .bak files.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk26.sh
+Chunk 26 applied. Ribbon buttons wired and MainController patched (backups created).
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk27.sh
+Chunk 27 applied. DetailsViewController created/updated (backup made).
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk28.sh
+Chunk 27 applied. DetailsViewController created/updated (backup made).
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk29.sh
+Writing MainControllerAccessor.java...
+Writing RibbonBar.fxml...
+Writing RibbonBarController.java...
+Patching MainLayout.fxml to include RibbonBar.fxml at top...
+awk: cmd. line:11: (FILENAME=src/main/resources/com/fileexplorer/ui/MainLayout.fxml FNR=7) fatal: function `feof' not defined
+Patching MainController.initialize() to register with MainControllerAccessor...
+./chunk29.sh: line 363: syntax error near unexpected token `}'
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ mvn -DskipTests package
+WARNING: A restricted method in java.lang.System has been called
+WARNING: java.lang.System::load has been called by org.fusesource.jansi.internal.JansiLoader in an unnamed module (file:/mnt/c/apache-maven-3.9.7/lib/jansi-2.4.1.jar)
+WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
+WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+
+WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
+WARNING: sun.misc.Unsafe::objectFieldOffset has been called by com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper (file:/mnt/c/apache-maven-3.9.7/lib/guava-33.2.0-jre.jar)
+WARNING: Please consider reporting this to the maintainers of class com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper
+WARNING: sun.misc.Unsafe::objectFieldOffset will be removed in a future release
+[INFO] Scanning for projects...
+[ERROR] [ERROR] Some problems were encountered while processing the POMs:
+[FATAL] Non-parseable POM /mnt/c/workspace/ALFE/pom.xml: start tag not allowed in epilog but got d (position: END_TAG seen ...lveMonkeys ImageIO dependencies for multi-image support -->\n    <d... @68:7)  @ line 68, column 7
+
+
+Patching MainController.java with demo wiring for RibbonBar buttons...
+Chunk 31 applied: RibbonBar demo wiring added to MainController.java
+
+Next steps:
+1) Run the app and click Ribbon buttons — Console output shows demo wiring.
+2) Replace System.out.println with actual service calls (FlowTileCell, HistoryManager, ThumbnailCache, etc.).
+3) Test Undo/Redo via HistoryManager after Delete/Move/Copy operations.
+4) Verify Preview Pane, Navigation Pane, and Details Pane toggles work visually.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk32.sh
+Writing TabManager.java...
+Patching MainLayout.fxml for dual panes and preview pane...
+Patching MainController.java with dual-pane, tab, preview pane logic...
+Chunk 32 applied: Dual-pane mode, tab management, and preview pane wired.
+
+Next steps:
+1) Build project: mvn -DskipTests package
+2) Launch app, test Ribbon + dual-pane + tabs + preview pane
+3) Update updatePreviewPane() to show real thumbnails or file previews (image, text, placeholder)
+4) Add drag-and-drop and FlowTileCell selection integration for both panes
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk33.sh
+Patching MainController.java for Drag-and-Drop + FlowTileCell integration...
+Writing DragAndDropHandler.java...
+Chunk 33 applied: Drag-and-Drop + FlowTileCell selection integration complete.
+
+Next steps:
+1) Launch app: mvn javafx:run or via IDE.
+2) Test dragging files into either pane and observe HistoryManager recording.
+3) FlowTileCell selection changes will trigger preview updates.
+4) Ribbon buttons (Copy/Move/Delete/Undo) now interact with HistoryManager.
+5) Optional: replace System.out with real file operations and update PreviewPane to show thumbnails.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk34.sh
+Patching ThumbnailGenerator.java for TwelveMonkeys multi-image support...
+awk: fatal: cannot open file `src/main/java/com/fileexplorer/ui/ThumbnailGenerator.java' for reading: No such file or directory
+Updating FlowTileCell.java to display multi-image thumbnails...
+Chunk 34 applied: Multi-image thumbnail support implemented using TwelveMonkeys.
+
+Next steps:
+1) Ensure TwelveMonkeys ImageIO dependencies are in pom.xml:
+   <dependency>
+       <groupId>com.twelvemonkeys.imageio</groupId>
+       <artifactId>imageio-core</artifactId>
+       <version>3.9.2</version>
+   </dependency>
+   (and all other plugins you need: jpeg, png, tiff, bmp, webp, gif)
+2) Launch app, test image previews in both panes.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ touch src/main/java/com/fileexplorer/ui/ThumbnailGenerator.java
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk34.sh
+Patching ThumbnailGenerator.java for TwelveMonkeys multi-image support...
+Updating FlowTileCell.java to display multi-image thumbnails...
+Chunk 34 applied: Multi-image thumbnail support implemented using TwelveMonkeys.
+
+Next steps:
+1) Ensure TwelveMonkeys ImageIO dependencies are in pom.xml:
+   <dependency>
+       <groupId>com.twelvemonkeys.imageio</groupId>
+       <artifactId>imageio-core</artifactId>
+       <version>3.9.2</version>
+   </dependency>
+   (and all other plugins you need: jpeg, png, tiff, bmp, webp, gif)
+2) Launch app, test image previews in both panes.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk35.sh
+Patching HistoryManager.java for Undo/Redo support...
+awk: fatal: cannot open file `src/main/java/com/fileexplorer/ui/HistoryManager.java' for reading: No such file or directory
+Patching MainController.java to wire Ribbon Undo/Redo...
+Chunk 35 applied: Full Undo/Redo stack with Ribbon integration is ready.
+
+Next steps:
+1) Run app and test: perform Delete, Move, Copy, Rename → Undo → Redo
+2) Verify HistoryPanel displays the timeline of actions
+3) Optionally integrate with FlowTileCell selection to enable multi-item undo/redo
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ touch src/main/java/com/fileexplorer/ui/HistoryManager.java
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk35.sh
+Patching HistoryManager.java for Undo/Redo support...
+Patching MainController.java to wire Ribbon Undo/Redo...
+Chunk 35 applied: Full Undo/Redo stack with Ribbon integration is ready.
+
+Next steps:
+1) Run app and test: perform Delete, Move, Copy, Rename → Undo → Redo
+2) Verify HistoryPanel displays the timeline of actions
+3) Optionally integrate with FlowTileCell selection to enable multi-item undo/redo
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk36.sh
+Writing NavigationTreeController.java...
+Patching MainLayout.fxml to include NavigationTree...
+Patching MainController.java to include NavigationTree reference...
+Chunk 36 applied: Left Navigation Tree with Pin/Quick Access is wired.
+
+Next steps:
+1) Run app and test double-click navigation, pin/unpin items.
+2) Right-click context menu should allow Open, Rename, Delete, Properties, New Folder.
+3) Pinned items are logged; optionally display them in a Quick Access panel.
+4) Integration with dual-pane tabs and HistoryManager is ready.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk37.sh
+Writing RibbonBar.fxml with full Home, Share, View menus...
+Chunk 37 applied: RibbonBar FXML with Home/Share/View fully generated.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$ ./chunk38.sh
+Patching MainLayout.fxml to add StatusBar...
+Patching MainController.java to update StatusBar labels...
+Chunk 38 applied: StatusBar with live path, selection count, total size, and operation progress integrated.
+
+Next steps:
+1) Update MainController / FlowTileCell selection listeners to call updateStatusBar().
+2) Update Ribbon actions (Copy/Move/Delete) to reflect progress in operationProgress.
+3) Launch app and verify StatusBar updates dynamically as files are selected or operations run.
+e322692@M014-1VXZKR3:/mnt/c/workspace/ALFE$
